--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-$font-primary: 'Arial', Arial, sans-serif;
+$font-primary: 'Work Sans', Arial, sans-serif;
 $font-secondary: 'Sacramento', Arial, serif;
 
 
